--- a/week4/week4-seq2seq.ipynb
+++ b/week4/week4-seq2seq.ipynb
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -54,10 +54,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 4,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def generate_equations(allowed_operators, dataset_size, min_value, max_value):\n",
@@ -77,8 +75,11 @@
     "    for _ in range(dataset_size):\n",
     "        ######################################\n",
     "        ######### YOUR CODE HERE #############\n",
+    "        inp = str(random.randint(min_value, max_value))+str(random.choice(allowed_operators))+str(random.randint(min_value, max_value))\n",
+    "        out = str(eval(inp))\n",
     "        ######################################\n",
-    "    return sample"
+    "        sample.append((inp,out))\n",
+    "    return sample\n"
    ]
   },
   {
@@ -90,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -100,6 +101,7 @@
     "    allowed_operators = ['+', '-']\n",
     "    dataset_size = 10\n",
     "    for (input_, output_) in generate_equations(allowed_operators, dataset_size, 0, 100):\n",
+    "        print(input_, output_) \n",
     "        if not (type(input_) is str and type(output_) is str):\n",
     "            return \"Both parts should be strings.\"\n",
     "        if eval(input_) != int(output_):\n",
@@ -109,11 +111,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "87+92 179\n",
+      "10-21 -11\n",
+      "40-65 -25\n",
+      "20-96 -76\n",
+      "86-56 30\n",
+      "80+83 163\n",
+      "53+70 123\n",
+      "74+41 115\n",
+      "51+48 99\n",
+      "100+71 171\n",
+      "Tests passed.\n"
+     ]
+    }
+   ],
    "source": [
     "print(test_generate_equations())"
    ]
@@ -127,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true
    },
@@ -138,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "collapsed": true
    },
@@ -166,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "collapsed": true
    },
@@ -185,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "collapsed": true
    },
@@ -236,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
     "collapsed": true
    },
@@ -251,11 +269,43 @@
     "\n",
     "      result: a tuple of (a list of ids, an actual length of sentence).\n",
     "    \"\"\"\n",
+    "    ######### YOUR CODE HERE #############\n",
+    "    sent_ids = [word2id[i] for i in sentence]\n",
+    "    if len(sent_ids) >= padded_len:\n",
+    "        sent_ids = sent_ids[:padded_len]\n",
+    "        sent_ids[-1] = word2id['$']\n",
+    "        #print(sent_ids[:padded_len])\n",
     "    \n",
-    "    sent_ids = ######### YOUR CODE HERE #############\n",
-    "    sent_len = ######### YOUR CODE HERE #############\n",
+    "    if len(sent_ids) < padded_len:\n",
+    "        sent_ids.append(word2id['$'])\n",
+    "        for _ in range(int(padded_len)-len(sent_ids)):\n",
+    "            sent_ids.append(word2id['#'])\n",
+    "    if len(sentence) >= padded_len:    \n",
+    "        sent_len = padded_len######### YOUR CODE HERE #############\n",
+    "    else:\n",
+    "        sent_len = len(sentence)+1  \n",
     "    \n",
     "    return sent_ids, sent_len"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "([5, 6, 7, 3, 5, 6, 7, 1, 2, 2], 8)"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sentence_to_ids(\"123+123\", word2id, 10)"
    ]
   },
   {
@@ -267,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {
     "collapsed": true
    },
@@ -291,11 +341,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tests passed.\n"
+     ]
+    }
+   ],
    "source": [
     "print(test_sentence_to_ids())"
    ]
@@ -309,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {
     "collapsed": true
    },
@@ -343,7 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {
     "collapsed": true
    },
@@ -380,7 +436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {
     "collapsed": true
    },
@@ -407,11 +463,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Input: ('793+5058', '5851')\n",
+      "Ids: [[11, 13, 7, 3, 9, 14, 9, 12, 1], [9, 12, 9, 5, 1, 2, 2, 2, 2]]\n",
+      "Sentences lengths: [9, 5]\n"
+     ]
+    }
+   ],
    "source": [
     "sentences = train_set[0]\n",
     "ids, sent_lens = batch_to_ids(sentences, word2id, max_len=10)\n",
@@ -430,7 +494,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {
     "collapsed": true
    },
@@ -448,7 +512,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {
     "collapsed": true
    },
@@ -473,10 +537,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 21,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def declare_placeholders(self):\n",
@@ -487,16 +549,17 @@
     "    self.input_batch_lengths = tf.placeholder(shape=(None, ), dtype=tf.int32, name='input_batch_lengths')\n",
     "    \n",
     "    # Placeholders for groundtruth and its actual lengths.\n",
-    "    self.ground_truth = ######### YOUR CODE HERE #############\n",
-    "    self.ground_truth_lengths = ######### YOUR CODE HERE #############\n",
+    "    self.ground_truth = tf.placeholder(shape=(None, None), dtype=tf.int32, name='ground_truth') ######### YOUR CODE HERE #############\n",
+    "    self.ground_truth_lengths =tf.placeholder(shape=(None, ), dtype=tf.int32, name='ground_truth_lengths') ######### YOUR CODE HERE #############\n",
     "        \n",
     "    self.dropout_ph = tf.placeholder_with_default(tf.cast(1.0, tf.float32), shape=[])\n",
-    "    self.learning_rate_ph = ######### YOUR CODE HERE ############# "
+    "    self.learning_rate_ph = tf.placeholder(dtype=tf.float32, shape = [], name= \"learning_rate\") \n",
+    "    ######### YOUR CODE HERE ############# "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {
     "collapsed": true
    },
@@ -516,7 +579,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {
     "collapsed": true
    },
@@ -526,15 +589,16 @@
     "    \"\"\"Specifies embeddings layer and embeds an input batch.\"\"\"\n",
     "     \n",
     "    random_initializer = tf.random_uniform((vocab_size, embeddings_size), -1.0, 1.0)\n",
-    "    self.embeddings = ######### YOUR CODE HERE ############# \n",
+    "    self.embeddings = tf.Variable(random_initializer, name= \"embedding_matrix\", dtype=tf.float32 )######### YOUR CODE HERE ############# \n",
     "    \n",
     "    # Perform embeddings lookup for self.input_batch. \n",
-    "    self.input_batch_embedded = ######### YOUR CODE HERE ############# "
+    "    self.input_batch_embedded = tf.nn.embedding_lookup(self.embeddings, self.input_batch) \n",
+    "    ######### YOUR CODE HERE ############# "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {
     "collapsed": true
    },
@@ -559,7 +623,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {
     "collapsed": true
    },
@@ -569,15 +633,21 @@
     "    \"\"\"Specifies encoder architecture and computes its output.\"\"\"\n",
     "    \n",
     "    # Create GRUCell with dropout.\n",
-    "    encoder_cell = ######### YOUR CODE HERE #############\n",
+    "    encoder_cell = tf.nn.rnn_cell.DropoutWrapper(tf.nn.rnn_cell.GRUCell(hidden_size),\n",
+    "                                                 input_keep_prob= self.dropout_ph, \n",
+    "                                                 output_keep_prob=self.dropout_ph,\n",
+    "                                                 state_keep_prob=self.dropout_ph)######### YOUR CODE HERE #############\n",
     "    \n",
     "    # Create RNN with the predefined cell.\n",
-    "    _, self.final_encoder_state = ######### YOUR CODE HERE #############"
+    "    _, self.final_encoder_state = tf.nn.dynamic_rnn(cell = encoder_cell, \n",
+    "                                                    inputs =self.input_batch_embedded,\n",
+    "                                                    sequence_length = self.input_batch_lengths,\n",
+    "                                                    dtype = tf.float32)######### YOUR CODE HERE #############"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {
     "collapsed": true
    },
@@ -645,7 +715,7 @@
     "    ground_truth_as_input = tf.concat([tf.expand_dims(start_tokens, 1), self.ground_truth], 1)\n",
     "    \n",
     "    # Use the embedding layer defined before to lookup embedings for ground_truth_as_input. \n",
-    "    self.ground_truth_embedded = ######### YOUR CODE HERE #############\n",
+    "    self.ground_truth_embedded = tf.nn.embedding_lookup(self.embeddings, ground_truth_as_input) ######### YOUR CODE HERE #############\n",
     "     \n",
     "    # Create TrainingHelper for the train stage.\n",
     "    train_helper = tf.contrib.seq2seq.TrainingHelper(self.ground_truth_embedded, \n",
@@ -653,7 +723,8 @@
     "    \n",
     "    # Create GreedyEmbeddingHelper for the inference stage.\n",
     "    # You should provide the embedding layer, start_tokens and index of the end symbol.\n",
-    "    infer_helper = ######### YOUR CODE HERE #############\n",
+    "    infer_helper = tf.contrib.seq2seq.GreedyEmbeddingHelper(self.ground_truth_embedded, start_tokens,end_symbol_id)\n",
+    "    ######### YOUR CODE HERE #############\n",
     "    \n",
     "  \n",
     "    def decode(helper, scope, reuse=None):\n",
@@ -1052,18 +1123,6 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.4.3"
   }
  },
  "nbformat": 4,
